# coding-challenge-05

./: .gitignore  CMakeLists.txt  README.md
include/object/: Object.hpp  ObjectFactory.hpp  ObjectRegistry.hpp
include/objects/: Circle.hpp  Rectangle.hpp  Square.hpp
src/: main.cpp
src/object/: ObjectFactory.cpp  ObjectRegistry.cpp
src/objects/: Circle.cpp  Rectangle.cpp  Square.cpp
tests/: test_objects.cpp
